fix overflow (#31)

--- a/packages/client/src/modules/ui/components/layout/layout.component.scss
+++ b/packages/client/src/modules/ui/components/layout/layout.component.scss
@@ -3,6 +3,7 @@
 
 .layout {
     display: grid;
+    grid-template-columns: minmax(0, 1fr);
     grid-template-rows: auto minmax(0, 1fr);
     width: 100%;
     height: 100%;
@@ -13,7 +14,7 @@
 
         display: grid;
         // grid-template-columns: auto minmax(0, 1fr) auto;
-        grid-template-columns: 1fr minmax(auto, 1fr) 1fr;
+        grid-template-columns: auto minmax(auto, 1fr) auto;
         align-items: center;
         gap: 24px;
 
@@ -30,9 +31,12 @@
         &__center {
             text-align: center;
             font-size: 1.4rem;
+            line-height: 1.2em;
             font-weight: 500;
             white-space: nowrap;
             color: var(--theme-background--contrast);
+            overflow: hidden;
+            text-overflow: ellipsis;
         }
     }
 
